--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,10 @@
                     </div>
                     <button class="btn">Get Started</button>
                 </div>
-                <div class="promo__cards">
+                <div class="promo__img">
+                    <img src="img/promo_img.png" alt="promo">
+                </div>
+                <!-- <div class="promo__cards">
                     <div class="promo__imgs">
                         <div class="promo__imgs-shedule">
                             <img src="img/schedule.png" alt="schedule">
@@ -75,7 +78,7 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
 
@@ -150,14 +153,14 @@
             <div class="countdown__wrapper">
                 <div class="timer">
                     <div class="timer__deadline">
-                        Coming <span>09 aug 2021</span> 
+                        Coming <span>09 aug 2021</span>
                     </div>
                     <div class="timer__wrapper">
                         <div class="timer__item ">
                             <span class="days">12</span>days
                         </div>
                         <div class="timer__item ">
-                           <span class="hours">12</span>hours
+                            <span class="hours">12</span>hours
                         </div>
                         <div class="timer__item ">
                             <span class="minutes">35</span>min
